--- a/solarcalc.html
+++ b/solarcalc.html
@@ -222,9 +222,9 @@
     });
 
   
-    function sendDataToSheet(name, phone, location, totalPower, totalCost) {
-  const url = "https://script.google.com/macros/s/AKfycbwiWrlbOtMSN4EQgyvoDMTnbRhwYrgEBb3X8tlfaCJa-O3NWZbXDA1fJxJdRPc8L9GQSg/exec"; // Replace with your Web App URL
-    
+   function sendDataToSheet(name, phone, location, totalPower, totalCost) {
+  const url = "https://script.google.com/macros/s/AKfycbwmYxFGnq7GOu-t4enVNPUAImJ5RwAUx5A7sScdeheVkPCXk4GLf1U2Ypbv480Qh2m-Iw/exec";  // Replace with your Web App URL from Google Apps Script
+
   const data = {
     name: name,
     phone: phone,
@@ -233,7 +233,7 @@
     totalCost: totalCost
   };
 
-  // Send the data silently via POST request
+  // Send the data silently via POST request to the Google Apps Script Web App
   fetch(url, {
     method: "POST",
     body: JSON.stringify(data),
@@ -243,16 +243,17 @@
   })
     .then(response => response.json())
     .then(data => {
-      if (data.status === "duplicate") {
-        console.warn("Duplicate entry detected:", data.message);
-      } else if (data.status === "success") {
+      if (data.status === "success") {
         console.log("Data sent successfully:", data.message);
+      } else {
+        console.error("Error sending data:", data.message);
       }
     })
     .catch(error => {
       console.error("Error sending data to sheet:", error);
     });
 }
+
 
     
     // Calculate Total Power and Materials
