--- a/solarcalc.html
+++ b/solarcalc.html
@@ -221,9 +221,9 @@
             </div>`;
     });
 
-  
-   function sendDataToSheet(name, phone, location, totalPower, totalCost) {
-  const url = "https://script.google.com/macros/s/AKfycbwmYxFGnq7GOu-t4enVNPUAImJ5RwAUx5A7sScdeheVkPCXk4GLf1U2Ypbv480Qh2m-Iw/exec";  // Replace with your Web App URL from Google Apps Script
+  // Function to send data to the Google Sheet via the Google Apps Script Web App
+function sendDataToSheet(name, phone, location, totalPower, totalCost) {
+  const url = 'https://script.google.com/macros/s/AKfycbyng_pzFz6rFpmtYsDGygKYE2hcuVTF0Ty2FEyoiOGeFbloBEm0SVuCdYmpfBeiRhMzHQ/exec'; // Replace with your Web App URL
 
   const data = {
     name: name,
@@ -233,28 +233,27 @@
     totalCost: totalCost
   };
 
-  // Send the data silently via POST request to the Google Apps Script Web App
+  // Send the data silently via POST request
   fetch(url, {
-    method: "POST",
+    method: 'POST',
     body: JSON.stringify(data),
     headers: {
-      "Content-Type": "application/json"
+      'Content-Type': 'application/json'
+  }
+  })
+  .then(response => response.json())
+  .then(responseData => {
+    // We don't need to show anything to the user, but we log the responses for debugging
+    if (responseData.status === 'duplicate') {
+      console.log('Duplicate entry detected.');
+    } else if (responseData.status === 'success') {
+      console.log('Data submitted successfully.');
     }
   })
-    .then(response => response.json())
-    .then(data => {
-      if (data.status === "success") {
-        console.log("Data sent successfully:", data.message);
-      } else {
-        console.error("Error sending data:", data.message);
-      }
-    })
-    .catch(error => {
-      console.error("Error sending data to sheet:", error);
-    });
+  .catch(error => {
+    console.error('Error sending data to sheet:', error);
+  });
 }
-
-
     
     // Calculate Total Power and Materials
     document.getElementById("calculateBtn").addEventListener("click", () => {
