--- a/test.html
+++ b/test.html
@@ -3,57 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Send Data to Google Sheet</title>
+    <title>Simple Form Submission</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f4f4f4;
+        }
+        .container {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            width: 300px;
+            text-align: center;
+        }
+        input[type="text"], input[type="email"] {
+            width: 100%;
+            padding: 8px;
+            margin: 8px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            width: 100%;
+        }
+        button:hover {
+            background-color: #45a049;
+        }
+    </style>
 </head>
 <body>
 
-<h2>Send Name and Email</h2>
-<form id="googleForm">
-    <div>
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
+    <div class="container">
+        <h2>Submit Your Information</h2>
+        <form id="dataForm">
+            <!-- Name Field -->
+            <input type="text" id="name" name="name" placeholder="Enter your name" required>
+            <!-- Email Field -->
+            <input type="email" id="email" name="email" placeholder="Enter your email" required>
+            <!-- Submit Button -->
+            <button type="submit">Submit</button>
+        </form>
+        <p id="responseMessage" style="margin-top: 15px; font-size: 14px;"></p>
     </div>
-    <div>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-        <button type="submit">Submit</button>
-    </div>
-</form>
 
-<script>
-    // Google Apps Script URL for POST
-    const formURL = 'https://script.google.com/macros/s/AKfycbyJsjGAaOO1JOyzsdyS9rprO-J-_7EXSyMqyroYxKjvKJ17qs2YnOFwu99EsEHrps4cUw/exec';  // Replace with your actual script URL
+    <script>
+        // Form submission event
+        document.getElementById("dataForm").addEventListener("submit", function(event) {
+            event.preventDefault();  // Prevent default form submission
 
-    // The form submission handler
-    document.getElementById("googleForm").addEventListener("submit", function(event) {
-        event.preventDefault(); // Prevent the default form submission
+            // Get the form data
+            const name = document.getElementById("name").value.trim();
+            const email = document.getElementById("email").value.trim();
 
-        const name = document.getElementById("name").value;
-        const email = document.getElementById("email").value;
+            // Validate the inputs
+            if (!name || !email) {
+                document.getElementById("responseMessage").textContent = "Please fill out both fields.";
+                return;
+            }
 
-        // Create a FormData object to send the data
-        const formData = new FormData();
-        formData.append("name", name);
-        formData.append("email", email);
+            // URL of the Apps Script web app (replace this with your own URL)
+            const scriptUrl = "https://script.google.com/macros/s/AKfycbwJHmxKGWyajcTXV_lDp-z2lxq7Xo5nOMbkE6_D_JPe2WD1MHomQeJmgIiY9PyvF0NH1Q/exec";  // Replace with your Apps Script URL
 
-        // Send the data to Google Apps Script via a POST request
-        fetch(formURL, {
-            method: 'POST',
-            body: formData
-        })
-        .then(response => response.text())
-        .then(result => {
-            console.log(result); // Success message or error
-            alert("Form submitted successfully!");
-        })
-        .catch(error => {
-            console.error("Error:", error);
-            alert("There was an error submitting the form.");
+            // Prepare the data to send
+            const formData = new FormData();
+            formData.append("name", name);
+            formData.append("email", email);
+
+            // Send the data using Fetch API (POST request)
+            fetch(scriptUrl, {
+                method: "POST",
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === "success") {
+                    document.getElementById("responseMessage").textContent = "Thank you! Your information has been submitted.";
+                    document.getElementById("dataForm").reset();  // Reset the form
+                } else {
+                    document.getElementById("responseMessage").textContent = "There was an error. Please try again.";
+                }
+            })
+            .catch(error => {
+                document.getElementById("responseMessage").textContent = "There was an error. Please try again.";
+                console.error('Error:', error);
+            });
         });
-    });
-</script>
+    </script>
 
 </body>
 </html>
