--- a/solarcalc.html
+++ b/solarcalc.html
@@ -221,39 +221,34 @@
             </div>`;
     });
 
-  // Function to send data to the Google Sheet via the Google Apps Script Web App
-function sendDataToSheet(name, phone, location, totalPower, totalCost) {
-  const url = 'https://script.google.com/macros/s/AKfycbxAObX3CXtfhdnnDHsGqozwHr29nRK7Hy51L2V5xhYl4zx1EBLBkeB_Oomi7EKpXsbVfQ/exec'; // Replace with your Web App URL
+   </div>`;
+        });
 
-  const data = {
-    name: name,
-    phone: phone,
-    location: location,
-    totalPower: totalPower,
-    totalCost: totalCost
-  };
+        // Function to send data to Google Sheets via Apps Script
+        function sendDataToSheet(name, phone, location, totalPower, totalCost) {
+            const scriptUrl = "https://script.google.com/macros/s/AKfycbxAObX3CXtfhdnnDHsGqozwHr29nRK7Hy51L2V5xhYl4zx1EBLBkeB_Oomi7EKpXsbVfQ/exec";  // Replace with your Apps Script Web App URL
+            
+            const formData = new FormData();
+            formData.append("name", name);
+            formData.append("phone", phone);
+            formData.append("location", location);
+            formData.append("totalPower", totalPower);
+            formData.append("totalCost", totalCost);
 
-  // Send the data silently via POST request
-  fetch(url, {
-    method: 'POST',
-    body: JSON.stringify(data),
-    headers: {
-      'Content-Type': 'application/json'
-  }
-  })
-  .then(response => response.json())
-  .then(responseData => {
-    // We don't need to show anything to the user, but we log the responses for debugging
-    if (responseData.status === 'duplicate') {
-      console.log('Duplicate entry detected.');
-    } else if (responseData.status === 'success') {
-      console.log('Data submitted successfully.');
-    }
-  })
-  .catch(error => {
-    console.error('Error sending data to sheet:', error);
-  });
-}
+            fetch(scriptUrl, {
+                method: "POST",
+                body: formData
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.status === "success") {
+                    console.log("Data submitted successfully.");
+                }
+            })
+            .catch(error => {
+                console.error('Error submitting data:', error);
+            });
+        }
     
     // Calculate Total Power and Materials
     document.getElementById("calculateBtn").addEventListener("click", () => {
