--- a/test.html
+++ b/test.html
@@ -114,7 +114,7 @@
 
         // Function to Submit Data to Google Sheets
         function submitToSheet(name, phone, location, totalPower, totalCost) {
-            const scriptUrl = "YOUR_SCRIPT_URL_HERE"; // Replace with your deployed Apps Script URL
+            const scriptUrl = "https://script.google.com/macros/s/AKfycbyq5GJ32feSN4MOHZPmxoT9TIkCoMEMQOiZpeZlGkTDLuB-OaQDZ3znSsMAE5F8m9fE/exec"; // Replace with your deployed Apps Script URL
 
             const formData = new FormData();
             formData.append("name", name);
