--- a/test.html
+++ b/test.html
@@ -4,7 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solar Inverter System Calculator</title>
-    <!-- Bootstrap CSS -->
+    <meta content="Latest News, Business, Technology, Sports, Education, Nigeria News, Global News" name="keywords">
+    <meta content="Stay updated with the latest news on Business, Technology, Sports, Education, and more from Nigeria and around the globe at EL-Zion Global Network TV." name="description">
+    <meta property="og:title" content="Solar Calculator: How much will it Cost you to Power your House? Find out!">
+    <meta property="og:description"content="Find out Cost of Solar Inverter System for your energy need">
+    <meta property="og:image" content="https://cyberbillafrica.github.io/artisanshub/img/solar-calc.jpeg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://cyberbillafrica.github.io/artisanshub/solar.html" />
+    <meta property="og:type" content="website" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Solar Calculator: How much will it Cost you to Power your House? Find out!" />
+    <meta name="twitter:description" content="Calculate Your Solar Power System Requirement and Cost" />
+    <meta name="twitter:image" content="https://cyberbillafrica.github.io/artisanshub/img/solar-calc.jpeg" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+   <!-- Favicon -->
+    <link href="img/tasha-logo.jpeg" rel="icon">
+
+    <!-- Google Web Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Rubik:wght@500;600;700&display=swap" rel="stylesheet">
+
+    <!-- Icon Font Stylesheet -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+    <!-- Libraries Stylesheet -->
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+    <!-- Customized Bootstrap Stylesheet -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Template Stylesheet -->
+    <link href="css/style.css" rel="stylesheet">
+ <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- FontAwesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
