--- a/test.html
+++ b/test.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="container mt-4">
-        <h1 class="text-center">Solar Inverter System Calculator</h1>
+        <h1 class="text-center">Test Solar Inverter System Calculator</h1>
 
         <!-- User Details Section -->
         <h5>Fill in your Personal Details</h5>
