--- a/solarcalc.html
+++ b/solarcalc.html
@@ -353,21 +353,15 @@ document.getElementById("result").insertAdjacentHTML("beforeend", `
     });
 </script>
 
-     
-
         <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
         <div class="container text-center">
-            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">Tasha Energy</a>, All Right Reserved.</p>
+            <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="index.html">Tasha Energy</a>, All Right Reserved.</p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://htmlcodex.com">CyberBill Africa</a></p>
         </div>
     </div>
     <!-- Copyright End -->
-
-    
-    <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a>
-                </div>
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
