--- a/test.html
+++ b/test.html
@@ -8,17 +8,23 @@
         body { font-family: Arial, sans-serif; margin: 20px; }
         h1 { text-align: center; }
         input { padding: 8px; width: 300px; margin: 10px auto; display: block; }
-        .product { display: flex; justify-content: space-between; padding: 10px; border: 1px solid #ddd; margin: 10px; }
-        .product img { width: 80px; height: 80px; }
+        .product { display: flex; justify-content: space-between; padding: 10px; border: 1px solid #ddd; margin: 10px; align-items: center; }
+        .product img { width: 80px; height: 80px; margin-right: 10px; }
         .cart-btn { background-color: green; color: white; border: none; padding: 5px 10px; cursor: pointer; }
+        .cart-btn:disabled { background-color: gray; cursor: not-allowed; }
+        #cart-container { margin-top: 20px; }
+        #total-price { font-weight: bold; }
     </style>
 </head>
 <body>
     <h1>Solar Products Store</h1>
     <input type="text" id="searchInput" placeholder="Search products...">
     <div id="productContainer"></div>
-    <h2>Shopping Cart</h2>
-    <ul id="cart"></ul>
+    <div id="cart-container">
+        <h2>Shopping Cart</h2>
+        <ul id="cart"></ul>
+        <p id="total-price">Total: ₦0</p>
+    </div>
 
     <script>
         const products = [
@@ -52,40 +58,82 @@
             { id: 28, name: "Solar Street Light 300W", price: 250000 }
         ];
 
-        const cart = [];
+
+        const cart = new Map(); // Use Map to track products and their quantities
         const productContainer = document.getElementById("productContainer");
         const searchInput = document.getElementById("searchInput");
+        const cartElement = document.getElementById("cart");
+        const totalPriceElement = document.getElementById("total-price");
 
-        // Render Products
+        // Render Products Dynamically
         function displayProducts(items) {
-            productContainer.innerHTML = "";
+            productContainer.innerHTML = ""; // Clear the product container
             items.forEach(product => {
-                productContainer.innerHTML += `
-                    <div class="product">
-                        <div>
-                            <h3>${product.name}</h3>
-                            <p>Price: ₦${product.price.toLocaleString()}</p>
-                        </div>
-                        <button class="cart-btn" onclick="addToCart(${product.id})">Add to Cart</button>
-                    </div>
-                `;
+                const productDiv = document.createElement("div");
+                productDiv.className = "product";
+
+                // Product image (placeholder)
+                const img = document.createElement("img");
+                img.src = "https://via.placeholder.com/80"; // Placeholder image
+                img.alt = product.name;
+
+                // Product details
+                const productDetails = document.createElement("div");
+                const productName = document.createElement("h3");
+                productName.textContent = product.name;
+                const productPrice = document.createElement("p");
+                productPrice.textContent = `Price: ₦${product.price.toLocaleString()}`;
+                productDetails.append(productName, productPrice);
+
+                // Add-to-Cart button
+                const addToCartBtn = document.createElement("button");
+                addToCartBtn.className = "cart-btn";
+                addToCartBtn.textContent = "Add to Cart";
+                addToCartBtn.onclick = () => addToCart(product);
+                if (cart.has(product.id)) addToCartBtn.disabled = true; // Disable if already in cart
+
+                productDiv.append(img, productDetails, addToCartBtn);
+                productContainer.appendChild(productDiv);
             });
         }
 
         // Add to Cart
-        function addToCart(productId) {
-            const product = products.find(item => item.id === productId);
-            cart.push(product);
+        function addToCart(product) {
+            if (!cart.has(product.id)) {
+                cart.set(product.id, { ...product, quantity: 1 });
+            }
             renderCart();
+            displayProducts(products); // Refresh product list to disable buttons
         }
 
         // Render Cart
         function renderCart() {
-            const cartElement = document.getElementById("cart");
-            cartElement.innerHTML = "";
+            cartElement.innerHTML = ""; // Clear cart items
+            let totalPrice = 0;
+
             cart.forEach(item => {
-                cartElement.innerHTML += `<li>${item.name} - ₦${item.price.toLocaleString()}</li>`;
+                const cartItem = document.createElement("li");
+                cartItem.textContent = `${item.name} - ₦${item.price.toLocaleString()} (Qty: ${item.quantity})`;
+
+                // Remove button
+                const removeBtn = document.createElement("button");
+                removeBtn.textContent = "Remove";
+                removeBtn.style.marginLeft = "10px";
+                removeBtn.onclick = () => removeFromCart(item.id);
+
+                cartItem.appendChild(removeBtn);
+                cartElement.appendChild(cartItem);
+                totalPrice += item.price * item.quantity;
             });
+
+            totalPriceElement.textContent = `Total: ₦${totalPrice.toLocaleString()}`;
+        }
+
+        // Remove from Cart
+        function removeFromCart(productId) {
+            cart.delete(productId);
+            renderCart();
+            displayProducts(products); // Refresh product list to enable buttons
         }
 
         // Search Functionality
