--- a/index.html
+++ b/index.html
@@ -94,6 +94,56 @@
     </nav>
     <!-- Navbar End -->
 
+    
+<!-- Carousel Start -->
+    <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
+        <div class="owl-carousel header-carousel position-relative">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
+                <img class="img-fluid" src="img/carousel-1.jpg" alt="">
+                <div class="owl-carousel-inner">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-2 text-white animated slideInDown">Leading the Way in Solar & Renewable Energy Solutions</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We provide cutting-edge solar energy systems, designed to meet the growing demand for sustainable energy solutions. Power your home and business with clean, efficient, and reliable solar power.</p>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Learn More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
+                <img class="img-fluid" src="img/carousel-2.jpg" alt="">
+                <div class="owl-carousel-inner">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-2 text-white animated slideInDown">Empowering Your Future with Solar Technology</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Harness the power of the sun with our innovative solar systems. Our solutions are designed to reduce energy costs and minimize environmental impact, helping you make a sustainable choice for the future.</p>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Discover More</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
+                <img class="img-fluid" src="img/carousel-3.jpg" alt="">
+                <div class="owl-carousel-inner">
+                    <div class="container">
+                        <div class="row justify-content-start">
+                            <div class="col-10 col-lg-8">
+                                <h1 class="display-2 text-white animated slideInDown">Your Trusted Partner in Solar Solutions</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We specialize in delivering customized solar power solutions, ensuring that each installation meets your unique needs. Experience the future of energy with our reliable solar systems.</p>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get Started</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- Carousel End -->
+
     <!-- Carousel Start -->
     <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-indicators">
