--- a/index.html
+++ b/index.html
@@ -98,14 +98,13 @@
 <!-- Carousel Start -->
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-1.jpg'>">
-                <img class="img-fluid" src="img/tasha.jpeg" alt="tasha-solar">
+              <img class="img-fluid" src="img/tasha.jpeg" alt="tasha-solar">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Leading the Way in Solar & Renewable Energy Solutions</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">We provide cutting-edge solutions to Power your home and business with clean, efficient, and reliable solar power.</p>
+                                <h1 class="display-2 text-white animated slideInDown">Pioneers in Solar & Renewable Energy Solutions</h1>
+                                <p class="fs-5 fw-medium text-dark mb-4 pb-3">Powering your home and business with clean, efficient, and reliable solar power.</p>
                                 <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get a Quote Now</a>
                             </div>
                         </div>
