--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
 <!-- Carousel Start -->
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
-              <img class="img-fluid" src="img/tasha.jpeg" alt="tasha-solar">
+             <div class="owl-carousel-item position-relative">
+               <img class="img-fluid" src="img/tasha.jpeg" alt="tasha-solar">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
