--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                           <div class="col-10 col-lg-8">
-                        <h1 class="display-2 text-white animated slideInDown">Pioneers in Solar & Renewable Energy Solutions</h1>
+                        <h2 class="display-2 text-white animated slideInDown">Pioneers in Solar Energy Solutions</h2>
                           <p class="fs-5 fw-medium text-white mb-4 pb-3">Powering your home and business with clean, efficient, and reliable solar power.</p>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Get a Quote Now</a>
+                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Read About Us</a>
                   </div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-2 text-white animated slideInDown">Harness the power of the Sun</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Reducing your energy cost with our innovative Solar Power Systems.</p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Discover More</a>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Get a Quote Now</a>
                             </div>
                         </div>
                     </div>
@@ -132,9 +132,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-2 text-white animated slideInDown">Your Trusted Partner in Solar Solutions</h1>
+                                <h2 class="display-2 text-white animated slideInDown">Your Trusted Partner in Solar Solutions</h2>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Lightening up our homes and streets with various Solar Lights</p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Get Started</a>
+                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Check our Product Store</a>
                             </div>
                         </div>
                     </div>
