--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                           <div class="col-10 col-lg-8">
                         <h2 class="display-2 text-white animated slideInDown">Pioneers in Solar Energy Solutions</h2>
                           <p class="fs-5 fw-medium text-white mb-4 pb-3">Powering your home and business with clean, efficient, and reliable solar power.</p>
-                        <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Read About Us</a>
+                        <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;">Read About Us</a>
                   </div>
                         </div>
                     </div>
@@ -120,21 +120,21 @@
                             <div class="col-10 col-lg-8">
                                 <h1 class="display-2 text-white animated slideInDown">Harness the power of the Sun</h1>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Reducing your energy cost with our innovative Solar Power Systems.</p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Get a Quote Now</a>
+                                <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;">Get a Quote Now</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-3.jpg'>">
-                <img class="img-fluid" src="img/solar-streetlight.jpg" alt="">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/tasha.jpeg'>">
+                <img class="img-fluid" src="img/tasha.jpeg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
                                 <h2 class="display-2 text-white animated slideInDown">Your Trusted Partner in Solar Solutions</h2>
                                 <p class="fs-5 fw-medium text-white mb-4 pb-3">Lightening up our homes and streets with various Solar Lights</p>
-                                <a href="" class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft" style="margin-top: 20px;">Check our Product Store</a>
+                                <a href="" class="btn btn-primary rounded-pill py-2 px-3 animated slideInLeft" style="margin-top: 20px;">Check our Product Store</a>
                             </div>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
 <!-- Carousel End -->
 
     <!-- Feature Start -->
-    <div class="container-xxl py-5" id="feature">
+    <div class="container-xxl py-3" id="feature">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -158,7 +158,7 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-0">Advanced Technology</p>
-                                <h5 class="mb-0">High-Performance Inverters</h5>
+                                <h5 class="mb-0">High-Performance Solar Products and Services</h5>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
@@ -167,7 +167,7 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-0">Sustainability</p>
-                                <h5 class="mb-0">Eco-Friendly Energy Solutions</h5>
+                                <h5 class="mb-0">Eco-friendly and Cost Effective Energy Solutions</h5>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
@@ -175,11 +175,11 @@
                                 <i class="fa fa-headphones"></i>
                             </div>
                             <div class="ms-4">
-                                <p class="mb-0">Support</p>
-                                <h5 class="mb-0">24/7 Customer Assistance</h5>
+                                <p class="mb-0">Support/After Sales</p>
+                                <h5 class="mb-0">24/7 Customer Assistance and Maintenance Services</h5>
                             </div>
                         </div>
-                        <a href="#" class="btn btn-primary rounded-pill py-3 px-5 mt-4">Explore Our Products</a>
+                        <a href="#" class="btn btn-primary rounded-pill py-2 px-3 mt-4">Explore Our Products</a>
                     </div>
                 </div>
                 <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
