--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 <!-- Quote End -->
 
     
-    <!-- Quote Start -->
+    <!-- Quote Start --
     <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
         <div class="container quote px-lg-0">
             <div class="row g-0 mx-lg-0">
@@ -613,7 +613,7 @@
     </div>
     <!-- Team End -->
 
-    <!-- Testimonial Start -->
+<!-- Testimonial Start -->
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -630,9 +630,9 @@
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
-                    <p>"Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita."</p>
+                    <p>"Tasha Solar provided an outstanding solar solution for our business. Their team helped us select the right system, and the installation process was seamless. We saw significant savings on our energy bills within the first month!"</p>
                     <h5 class="mb-1">John Doe</h5>
-                    <span class="fst-italic">CEO, SolarTech</span>
+                    <span class="fst-italic">CEO, GreenTech Enterprises</span>
                 </div>
             </div>
             <!-- Testimonial 2 -->
@@ -644,9 +644,9 @@
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
-                    <p>"Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita."</p>
+                    <p>"We turned to Tasha Solar to install solar panels at our home, and the results have been amazing. The team walked us through the entire process and helped us understand the best setup for our needs. Highly recommend!"</p>
                     <h5 class="mb-1">Jane Smith</h5>
-                    <span class="fst-italic">Marketing Director, Green Energy Solutions</span>
+                    <span class="fst-italic">Homeowner</span>
                 </div>
             </div>
             <!-- Testimonial 3 -->
@@ -658,9 +658,9 @@
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
-                    <p>"Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita."</p>
+                    <p>"Working with Tasha Solar was a game-changer for our company. The team was professional, and the solar power system they installed has reduced our operational costs. We’re proud to support renewable energy!"</p>
                     <h5 class="mb-1">Michael Green</h5>
-                    <span class="fst-italic">Founder, EcoPower</span>
+                    <span class="fst-italic">Operations Manager, EcoPower</span>
                 </div>
             </div>
         </div>
@@ -669,59 +669,58 @@
 <!-- Testimonial End -->
 
 
-    <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h6 class="text-primary">Testimonial</h6>
-                <h1 class="mb-4">What Our Clients Say!</h1>
+<!-- Footer Start -->
+<div class="container-fluid bg-dark text-body footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container py-5">
+        <div class="row g-5">
+            <!-- Address Section -->
+            <div class="col-lg-6 col-md-6">
+                <h5 class="text-white mb-4">Address & Contact</h5>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Block A27 New Kenyatta Building Material Market, Enugu</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>Primary: 07035628665</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>Secondary: 08060382537</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>cedaccinfo@gmail.com</p>
+                <div class="d-flex pt-2">
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                </div>
             </div>
-            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-1.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
+
+            <!-- Quick Links Section -->
+            <div class="col-lg-6 col-md-6">
+                <h5 class="text-white mb-4">Quick Links</h5>
+                <a class="btn btn-link text-light" href="">About Us</a>
+                <a class="btn btn-link text-light" href="">Contact Us</a>
+                <a class="btn btn-link text-light" href="">Our Services</a>
+                <a class="btn btn-link text-light" href="">Terms & Condition</a>
+                <a class="btn btn-link text-light" href="">Support</a>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer Bottom Section -->
+    <div class="container">
+        <div class="copyright">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a href="#">Tasha Solar</a>, All Rights Reserved.
                 </div>
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-2.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-3.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
+                <div class="col-md-6 text-center text-md-end">
+                    Designed By <a href="https://htmlcodex.com">HTML Codex</a>
                 </div>
             </div>
         </div>
     </div>
-    <!-- Testimonial End -->
+</div>
+<!-- Footer End -->
+
+<!-- Back to Top Button -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 
+    
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-body footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
