--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 <a href="service.html" class="nav-item nav-link">Services</a>
                 <a href="project.html" class="nav-item nav-link">Projects</a>
                 <a href="solar-store.html" class="nav-item nav-link">Solar Store</a>
-                <a href="solar-store.html" class="nav-item nav-link">Solar Store</a>
-                <a href="solar-calculator.html" class="nav-item nav-link">Solar Calculator</a>
+                <a href="solar-calculator.html" class="nav-item nav-link" style="font-weight: bold; color: #26d48c;">Solar Calculator</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="#quote" class="btn btn-primary rounded-0 py-4 px-lg-5 d-none d-lg-block">Get A Quote<i class="fa fa-arrow-right ms-3"></i></a>
@@ -677,8 +676,8 @@
             <div class="col-lg-6 col-md-6">
                 <h5 class="text-white mb-4">Address & Contact</h5>
                 <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Block A27 New Kenyatta Building Material Market, Enugu</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>Primary: 07035628665</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>Secondary: 08060382537</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>07035628665</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>08060382537</p>
                 <p class="mb-2"><i class="fa fa-envelope me-3"></i>cedaccinfo@gmail.com</p>
                 <div class="d-flex pt-2">
                     <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
