--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             </div>
                             <div class="ms-4">
                                 <p class="mb-0">Advanced Technology</p>
-                                <h5 class="mb-0">High-Performance Solar Products and Services</h5>
+                                <h5 class="mb-0">High-Performance Solar Products and Quality Services</h5>
                             </div>
                         </div>
                         <div class="d-flex mb-4">
@@ -181,11 +181,7 @@
                         <a href="#" class="btn btn-primary rounded-pill py-2 px-3 mt-4">Explore Our Products</a>
                     </div>
                 </div>
-                <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                    <div class="position-relative h-100">
-                        <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="Feature Image">
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
@@ -238,32 +234,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="service-item rounded overflow-hidden">
-                    <img class="img-fluid" src="img/img-600x400-2.jpg" alt="Wind Turbines">
-                    <div class="position-relative p-4 pt-0">
-                        <div class="service-icon">
-                            <i class="fa fa-wind fa-3x"></i>
-                        </div>
-                        <h4 class="mb-3">Wind Turbines</h4>
-                        <p>Explore our wind turbine solutions that harness the power of wind to provide sustainable, renewable energy for your needs.</p>
-                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="service-item rounded overflow-hidden">
-                    <img class="img-fluid" src="img/img-600x400-3.jpg" alt="Hydropower Plants">
-                    <div class="position-relative p-4 pt-0">
-                        <div class="service-icon">
-                            <i class="fa fa-lightbulb fa-3x"></i>
-                        </div>
-                        <h4 class="mb-3">Hydropower Plants</h4>
-                        <p>Harness the power of water with our hydroelectric solutions for a continuous and eco-friendly energy source.</p>
-                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
-                    </div>
-                </div>
-            </div>
+            
             <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item rounded overflow-hidden">
                     <img class="img-fluid" src="img/img-600x400-4.jpg" alt="Solar Energy Storage">
@@ -284,21 +255,8 @@
                         <div class="service-icon">
                             <i class="fa fa-wind fa-3x"></i>
                         </div>
-                        <h4 class="mb-3">Wind Turbine Installation</h4>
-                        <p>Our expert team provides professional installation of wind turbines to help you harness the wind’s potential for clean energy.</p>
-                        <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="service-item rounded overflow-hidden">
-                    <img class="img-fluid" src="img/img-600x400-6.jpg" alt="Hydropower Energy Solutions">
-                    <div class="position-relative p-4 pt-0">
-                        <div class="service-icon">
-                            <i class="fa fa-lightbulb fa-3x"></i>
-                        </div>
-                        <h4 class="mb-3">Hydropower Energy Solutions</h4>
-                        <p>Efficient, sustainable hydropower solutions tailored to meet your energy demands while reducing your carbon footprint.</p>
+                        <h4 class="mb-3">Solar Inverter Installation</h4>
+                        <p>Our expert team provides professional installation of Solar Inverters to help you harness the sun’s potential for clean energy.</p>
                         <a class="small fw-medium" href="#">Read More<i class="fa fa-arrow-right ms-2"></i></a>
                     </div>
                 </div>
