--- a/index.html
+++ b/index.html
@@ -323,11 +323,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 pe-lg-0 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
-                <div class="position-relative h-100">
-                    <img class="position-absolute img-fluid w-100 h-100" src="img/feature.jpg" style="object-fit: cover;" alt="Solar Installation">
-                </div>
-            </div>
+            
         </div>
     </div>
 </div>
@@ -337,7 +333,7 @@
 <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-            <h6 class="text-primary">Our Projects</h6>
+            <h3 class="text-primary">Our Projects</h3>
             <h1 class="mb-4">Innovative Renewable Energy Solutions</h1>
         </div>
         <div class="row g-4">
@@ -355,20 +351,7 @@
                     <h5 class="lh-base">Cutting-edge solar panel installations for sustainable energy</h5>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 portfolio-item second">
-                <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="img/img-600x400-2.jpg" alt="Wind Turbines">
-                    <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
-                    </div>
-                </div>
-                <div class="pt-3">
-                    <p class="text-primary mb-0">Wind Turbines</p>
-                    <hr class="text-primary w-25 my-2">
-                    <h5 class="lh-base">Harnessing wind energy for a cleaner future</h5>
-                </div>
-            </div>
+            
             <div class="col-lg-4 col-md-6 portfolio-item third">
                 <div class="portfolio-img rounded overflow-hidden">
                     <img class="img-fluid" src="img/img-600x400-4.jpg" alt="Hydropower Plants">
@@ -412,19 +395,6 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item third">
-                <div class="portfolio-img rounded overflow-hidden">
-                    <img class="img-fluid" src="img/img-600x400-6.jpg" alt="Wind Turbine Systems">
-                    <div class="portfolio-btn">
-                        <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href="img/img-600x400-6.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                        <a class="btn btn-lg-square btn-outline-light rounded-circle mx-1" href=""><i class="fa fa-link"></i></a>
-                    </div>
-                </div>
-                <div class="pt-3">
-                    <p class="text-primary mb-0">Wind Turbine Systems</p>
-                    <hr class="text-primary w-25 my-2">
-                    <h5 class="lh-base">Clean, renewable energy solutions using wind power</h5>
-                </div>
-            </div>
         </div>
     </div>
 </div>
@@ -434,7 +404,8 @@
    <!-- Quote Start -->
 <div class="container-fluid bg-light overflow-hidden my-5 px-lg-0">
     <div class="container quote px-lg-0">
-        <div class="row g-0 mx-lg-0">
+        <h3 class="text-primary">Get Quotation!</h3>
+                 <div class="row g-0 mx-lg-0">
             <div class="col-lg-6 ps-lg-0 wow fadeIn" data-wow-delay="0.1s" style="min-height: 400px;">
                 <div class="position-relative h-100">
                     <img class="position-absolute img-fluid w-100 h-100" src="img/quote.jpg" style="object-fit: cover;" alt="">
